--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
-// Navigation code here
+nav{
+    width: 100%;
+    background: @sea-shell;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h1{
+        font-size: 5rem;
+        padding: 10px 0;
+    }
+    .links{
+        max-width: 600px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        a{
+            color: @river-bend;
+            text-decoration: none;
+            font-size: 2rem;
+            padding: 10px 0;
+        }
+    }
+}
