--- a/css/index.css
+++ b/css/index.css
@@ -162,11 +162,12 @@ p {
 }
 nav {
   width: 100%;
-  background: #F1F1F1;
+  background: #F6F6F6;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-bottom: 2px solid #F1F1F1;
 }
 nav h1 {
   font-size: 5rem;
@@ -194,14 +195,15 @@ footer {
   justify-content: center;
   align-items: center;
 }
-header {
-  max-width: 800px;
-}
 .home .intro h2 {
   padding: 15px;
 }
 .home .intro p {
   padding: 0 15px;
+}
+.home .intro img {
+  max-width: 800px;
+  width: 100%;
 }
 .home .space-images {
   display: flex;
@@ -213,6 +215,22 @@ header {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 90%;
+    margin: 20px auto;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images img.sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images img.launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -230,8 +248,23 @@ header {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    width: 100%;
+    padding: 30px 0px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 90%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -239,9 +272,35 @@ header {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  background: #22283A;
+  color: #F6F7F8;
+  padding: 10px 20px;
+  font-size: 2rem;
+  width: 33%;
+  border-radius: 5px;
+}
+.home .walk .walk-text .btn:hover {
+  background: #F6F7F8;
+  color: #22283A;
+  cursor: pointer;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin: 0 auto 25px;
+    width: 90%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
