--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,4 @@
 // Home Content
-header{
-  max-width: 800px;
-}
 
 .home {
 
@@ -14,6 +11,11 @@ header{
     p {
       padding:0 15px;
     }
+
+    img{
+      max-width: 800px;
+      width: 100%;
+    }
   
   }
 
@@ -21,12 +23,25 @@ header{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width: 90%;
+        margin: 20px auto;
+      }
+      &.sky{
+        @media @phone{
+          display: none;
+        }
+      }
+      &.launch{
+        @media @phone{
+          display: none;
+        }
+      }
     }
   }
 
@@ -48,10 +63,17 @@ header{
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone{
+      width: 100%;
+      padding: 30px 0px;
+      .flex(column-reverse, center, center);
+    }
 
     .walk-text {
       width: 50%;
-
+      @media @phone{
+        width: 90%;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -61,12 +83,17 @@ header{
       }
 
       .btn {
+        .butt(@btn-bg-color, @porcelain);
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone{
+        margin: 0 auto 25px;
+        width: 90%;
+      }
       
       img {
         width: 100%;
