--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,8 @@
 nav{
     width: 100%;
-    background: @sea-shell;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background: @nav-bg;
+    .flex(column, center, center);
+    border-bottom: 2px solid @nav-border;
     h1{
         font-size: 5rem;
         padding: 10px 0;
@@ -15,7 +13,7 @@ nav{
         display: flex;
         justify-content: space-around;
         a{
-            color: @river-bend;
+            color: @nav-font;
             text-decoration: none;
             font-size: 2rem;
             padding: 10px 0;
