--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,6 +12,7 @@
     font-size: 2rem;
     width: 33%;
     border-radius: 5px;
+    transition: background .5s ease-out 0s;
     &:hover{
         background: @color;
         color: @bg;
