made nav fixed and opaque

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,8 @@ nav{
     background: @nav-bg;
     .flex(column, center, center);
     border-bottom: 2px solid @nav-border;
+    position: fixed;
+    opacity: .75;
     h1{
         font-size: 5rem;
         padding: 10px 0;
