--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,8 @@ nav {
   justify-content: center;
   align-items: center;
   border-bottom: 2px solid #F1F1F1;
+  position: fixed;
+  opacity: 0.75;
 }
 nav h1 {
   font-size: 5rem;
@@ -200,6 +202,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 112px;
 }
 .home .intro h2 {
   padding: 15px;
