--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,8 +1,6 @@
 // Home Content
 
 .home {
-  padding-top: 112px;
-
   .intro {
 
     h2 {
@@ -16,10 +14,13 @@
     img{
       max-width: 800px;
       width: 100%;
+      border-radius: 5px;
     }
   
   }
-
+  .no-jump{
+    padding-top: 42px;
+  }
   .space-images {
     display: flex;
     flex-wrap: wrap;
