--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,33 @@
+.sticky{
+    position: fixed;
+    top: 0;
+    opacity: .95;
+    width: 100%;
+    background: @nav-bg;
+    border-bottom: 2px solid @nav-border;
+    display: flex;
+    justify-content: center;
+    a{
+        color: @nav-font;
+        text-decoration: none;
+        font-size: 2rem;
+        padding: 10px 29px;
+        text-shadow: @waterloo 0px 0px;
+        transition: text-shadow .5s ease-out 0s;
+        &:hover{
+            color: @header-font-color;
+            text-shadow: @waterloo 2.5px 5px 5px;
+        }
+    }
+}
 nav{
     width: 100%;
     background: @nav-bg;
     .flex(column, center, center);
     border-bottom: 2px solid @nav-border;
-    position: fixed;
     opacity: .95;
     h1{
-        font-size: 5rem;
+        font-size: 5rem; 
         padding: 10px 0;
     }
     .links{
@@ -27,11 +48,4 @@ nav{
             }
         }
     }
-}
-.sticky{
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    background: @nav-bg;
-    border-bottom: 2px solid @nav-border;
 }
