--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,7 @@
 // Mixins Here
 .flex(@dir, @main, @cross){
     display: flex;
+    flex-wrap: wrap;
     flex-direction: @dir;
     justify-content: @main;
     align-items: @cross;
