--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,16 @@
 
   .intro {
 
+    div{
+      background: url(../img/main-header.png) no-repeat center / cover;
+      height: 20rem;
+      border-radius: 5px;
+
+      @media @phone{
+        height: 10rem;
+      }
+    }
+
     h2 {
       padding: 15px;
     }
@@ -24,6 +34,18 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone{
+        display: none;
+      }
+
+      &.blast{
+        @media @phone{
+          display: block;
+          width: 90%;
+          margin: 2rem auto;
+        }
+      }
     }
   }
 
@@ -46,8 +68,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      margin: 0 auto;
+      flex-direction: column-reverse;
+      width: 100%;
+      padding: 0 2rem;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone{
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,12 +91,18 @@
       }
 
       .btn {
+        .button(@wild-sand, @btn-bg-color, 5px, 15px);
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone{
+        width: 100%;
+        margin: 2rem auto;
+      }
       
       img {
         width: 100%;
