--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,2 +1,28 @@
 // Mixins Here
+.button(@1, @2, @3, @4, @5: .5s, @6: ease-out){
+    cursor: pointer;
+    width: max-content;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: @1;
+    background: @2;
+    padding: @3 @4;
+    .trans(@5, @6);
 
+    @media @phone{
+        width: 100%;
+        padding: 2.5rem;
+        text-align: center;
+        margin-bottom: 1.5rem;
+    }
+
+    &:hover{
+        background: @1;
+        color: @2;
+    }
+}
+
+.trans(@1, @2){
+    transition: @1 @2;
+}
