--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,2 +1,40 @@
 // Navigation code here
+nav{
+    width: 100%;
+    background: @nav-bg;
+    border-bottom: 1px solid @nav-border;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: sticky;
+    top: 0;
 
+    h1{
+        font-size: 3.5rem;
+        margin: 1rem;
+    }
+
+    div{
+        width: 50%;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-weight: bold;
+
+        @media @phone{
+            width: 80%;
+        }
+
+        a{
+            text-decoration: none;
+            color: @nav-font;
+            font-size: 1.25rem;
+            transition: .5s ease-out;
+
+            &:hover{
+                text-shadow: @waterloo 0 2px 5px;
+            }
+        }
+    }
+}
